@@ -1950,6 +1950,7 @@ use this flag with care! The flag LEVEL=[NUMBER] can also be substituted for a s
 name to force all the listed effects be cast at a different level than default.\
 The flag MAXTICKS=[NUMBER] can be used to shorted the length of all spell casts. \n\r\
 The flag TICKS=[NUMBER] can be used to shorted the length of all subsequent listed spells. \n\r\
+The flag ONCLOSED can be used to invoke effects only when the container is closed. \n\r\
 \n\r\
 The parameters may also END with the key word MASK= followed by a mask.  This \
 mask will select which kinds of mobs and players will be affected by this property. \
